# wwwtech.de

./: .env  .formatter.exs  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  brunch-config.js  change_db.sql  mix.exs  package-lock.json  package.json
.build/: build  build-docker  deploy
.deliver/: build  config
.deliver/secrets/: api.key  prod.web.defunced.de.exs
.github/: dependabot.yml
.github/workflows/: build.yml
.sqlx/: query-007cc7a34370986b44929afb1d2833b2584c470ee50cadc92f95ac37a2e3c4fb.json  query-01c540e75f358061ffeb2e559e887d538998acbb5d73b5f26733f03df454524e.json  query-0433614eb1945d6891fc6c2f1f919879cb99431c4e98260d9319171bb7405499.json  query-05c1e835f0972015b880133e5729320c32415b293cc2ba91a9c73a602a5c39e8.json  query-0be1f2c129f745c1973a9550e6875e69722ca53b44bceec2e2271bc37de2ec8a.json  query-0cc606cfb9d8da4518bcb3b37f444b6572cd3a67d68be44c06bcd339fab1f0d9.json  query-0e31448fa66abaf9a9ec3aeeac1400d122a6d88bc146471819d158eb43c727be.json  query-0fd976182b63ff9e2353e977ea38c590faf06067132b4db135d97549466505d7.json  query-11cddad398560b55e4c8c060067b9b75099aae86966d6ab38374a7b9e3dfbc9e.json  query-125e1d694a50361f3413e539a58517877a8739fe6e542826ea1e6be64df5a2c2.json  query-12b9665a686338f6ccead84798cd46cd9320e2e0698919d01ed8100156cf10d0.json  query-1c1874ee45a77a388a6d6dd8b0c9f1dd6f88849424476e609634441122288541.json  query-1d00b9a3e867190f71093a37fb9e04457e5ef22befd916dd7d3dde0033139749.json  query-1ff99466ab6316a08519e20dbc7342aa566ad03cf8c96f29d534d28257462bbf.json  query-29f77223cc6967aed6d4769b6d7271d8548db20784b9e9633589b0f48f5904b0.json  query-3569a01677cfe7eb37c9a98548cb508c4b8b1ba7ceb2f59d0be7dfcf499dd755.json  query-3a6520871f66af833c0edb84b80545ff0c0e82196e49e28479fd55994fe92cdf.json  query-3aae8e31f890c940b676126259eab122f9f22a07f6adffd52fea04ba4f6299a8.json  query-3f34e7b01196c23560568afc5299f8f06f6440e1b8caa833b3b0b4db459ceb02.json  query-3f3af18b95de2c41417afa382c57f988856c714ecb417696b7cc0f519631a659.json  query-447727856d2601e75b746b9b2460383ccade40f5869c9815402cf64e5db66b87.json  query-4e5d66210d923d6ba4a90c1bf4fc58ee70e3a7b8f35bacec1680903f69ce5c38.json  query-52a6bc761b1c3e50731e64646117b728c2a760760d75e69b7111d386ee572fd9.json  query-58080a52213086bae182995b895461493291382471dfd880b6b5c4307591ba9a.json  query-5c611afe90d2dc861c2ec7f93083555d804b783ede7501eb1158be4153126129.json  query-5c74498c3796e5ce8cc8564ea5abea9fba37ff6f2cd16bddeec342c7e307ee05.json  query-602a6d55631acb6aac452a937d2a76ffb7a03f0bffe8b3d6665bf6d1350e1b82.json  query-72daa9511dd961ae8d9eb574faffc45fece301116e2bcd816c619f970e106871.json  query-74dba2b51e8c551574dbcdfe1a60c2f56e9ae93f3a71e7b831e0bc3400d963ed.json  query-7cea0dc6f7affac18dbf1bcdaf2e252dc256e5b4360f4978222ac2ebe7084fe4.json  query-7e0a565439f5e179dd3b9b006be7e8e66d226001eb5a44991f1d5f769d11d1c8.json  query-8cfc039330dcfafa12b6e0d9374ffaa400338fbebc7d15fcd4b74c611be95ccc.json  query-8df88b405b99fc6a17fdcc5d6de27da6dca548f6663d9307b458adda8332dd7f.json  query-8e167591b5e806f984b8f71d106bde23681b469a74dc6f41216283d939ae1922.json  query-95d2d9c3b1d091f29d553fbdc1509df3be9cf9cfeffe8c3f0a8ad24ba7291047.json  query-a40e762e703e007518678138b2f222b6e6c8126c42e50e26450d685c38c0be0a.json  query-a6267ffd3956551269f3bd4937e697733f919ef7243114e709b2acfc31c8d87d.json  query-a9ef4c3b56a5e0410e5a365b3498596b655593eddd4c040918ab445d962fae16.json  query-aa831f43b8a244d72e601688ed078cd499743e8dca1701125dfc62fd27d9dcf8.json  query-accc9fafae11923a6491e04b283a64c658bea00facdcb9df1f54aa579a4d2381.json  (+17 more)
assets/: .babelrc  brunch-config.js  package-lock.json  package.json  webpack.config.js
assets/css/: about.scss  answers.scss  app.css.scss  app.scss  article.scss  base.scss  dated_list.scss  default_header.scss  forms.scss  items-list.scss  like.scss  mentions.scss  note.scss  notes.scss  pagination.css.scss  paging.scss  picture.scss  pictures.css.scss  pictures.scss  root.scss  site-header.scss  site-nav-footer.scss  software.scss  vars.scss  welcome.scss  whatsnew.scss
config/: config.exs  dev.exs  prod.exs  releases.exs  ssh_key.pub  test.exs
lib/: wwwtech.ex  wwwtech_web.ex
migrations/: 20241110081708_change_content_warning_to_text.down.sql  20241110081708_change_content_warning_to_text.up.sql  20250411103756_fix_alt_text.down.sql  20250411103756_fix_alt_text.up.sql
rel/: config.exs
src/: articles.rs  caching_middleware.rs  deafies.rs  errors.rs  likes.rs  main.rs  middleware.rs  models.rs  multipart.rs  notes.rs  pages.rs  pictures.rs  posse.rs  schema.rs  session.rs  static_handlers.rs  store.rs  uri_helpers.rs  utils.rs  webmentions.rs
src/api/: mod.rs  (+3 more)
static/: humans.txt  robots.txt  security.txt  styles.css
templates/: layout.html.j2  layout.html.jinja  layout.html.tera  login.html.j2  login.html.jinja  paging.html.j2  paging.html.jinja  paging.html.tera  paging_german.html.j2  paging_german.html.jinja
test/: test_helper.exs
web/: gettext.ex  router.ex  web.ex
(+433 files in other folders)
