[package]
name = "wwwtech_rs"
version = "2024.5.5-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = [
  "http2",
  "multipart",
  "tracing",
  "macros",
] }
axum-extra = "0.9"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["tracing", "io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
image = "0.25"
kamadak-exif = "0.5"
anyhow = { version = "1.0.86", features = ["backtrace"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
atom_syndication = "0.12"
pulldown-cmark = { version = "0.11", default-features = false, features = [
  "html",
] }
regex = "1"
axum-login = "0.15.1"
async-trait = "0.1"
eyre = "0.6"
argon2 = "0.5"
new_mime_guess = "4.0"

# webmentions
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
visdom = "1.0"
itertools = "0.13"
urlencoding = "2.1"
lettre = "0.11.7"
axum_typed_multipart = "0.11"
tempfile = "3.10"
tower = "0.4.13"

[dependencies.mastodon-async]
version = "1.3"
features = ["toml"]

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"]

[build-dependencies]
askama = "0.12"
