[package]
name = "wwwtech_rs"
version = "2025.4.11-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = [
  "http2",
  "multipart",
  "tracing",
  "macros",
] }
axum-extra = "0.10.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["tracing", "io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
image = "0.25"
kamadak-exif = "0.6"
anyhow = { version = "1.0.98", features = ["backtrace"] }
askama = { version = "0.14" }
atom_syndication = "0.12"
pulldown-cmark = { version = "0.13", default-features = false, features = [
  "html",
] }
regex = "1"
axum-login = "0.17.0"
async-trait = "0.1"
eyre = "0.6"
argon2 = "0.5"
new_mime_guess = "4.0"

# webmentions
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
visdom = "1.0"
itertools = "0.14"
urlencoding = "2.1"
lettre = "0.11.15"
axum_typed_multipart = "0.16"
tempfile = "3.19"
tower = "0.5.2"
moka = { version = "0.12.10", features = ["future"] }

[dependencies.mastodon-async]
version = "1.3"
features = ["toml"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "chrono"]

[build-dependencies]
askama = "0.14"
